@@ -78,8 +78,6 @@ public:
 
   SYNC_CODE(RCLock* getRCLock() const { return &theRCLock; })
 
-  store::Item_t getAtomizationValue() const;
-
   void getTypedValue(store::Item_t& val, store::Iterator_t& iter) const;
 
   bool castToLong(store::Item_t& result) const;
@@ -145,7 +143,7 @@ public:
       return theBaseItem->compare(other->getBaseItem(), timezone, collation);
   }
 
-  store::Item_t getEBV() const { return theBaseItem->getEBV(); }
+  bool getEBV() const { return theBaseItem->getEBV(); }
 
   zstring getStringValue() const { return theBaseItem->getStringValue(); }
 
@@ -317,7 +315,7 @@ public:
         long timezone = 0,
         const XQPCollator* collation = 0) const;
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const { return theValue; }
 
@@ -372,7 +370,7 @@ public:
 
   store::Item* getType() const;
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const;
 
@@ -525,7 +523,7 @@ public:
     return theValue.compare(other->getString());
   }
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const { return theValue; }
 
@@ -746,7 +744,7 @@ public:
         long timezone = 0,
         const XQPCollator* aCollation = 0) const;
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const { return theValue; }
 
@@ -795,7 +793,7 @@ public:
         long timezone = 0,
         const XQPCollator* collator = 0) const;
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const;
 
@@ -1061,7 +1059,7 @@ public:
         long timezone = 0,
         const XQPCollator* aCollation = 0) const;
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const;
 
@@ -1121,7 +1119,7 @@ public:
     return theValue.compare(other->getDurationValue());
   }
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const;
 
@@ -1180,7 +1178,7 @@ public:
     return theValue.compare(other->getDoubleValue());
   }
 
-	store::Item_t getEBV( ) const;
+	bool getEBV( ) const;
 
   zstring getStringValue() const;
 
@@ -1241,7 +1239,7 @@ public:
     return getDoubleValue().compare(other->getDoubleValue());
   }
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const;
 
@@ -1318,7 +1316,7 @@ public:
     return theValue.compare(other->getDecimalValue());
   }
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const;
 
@@ -1371,7 +1369,7 @@ public:
         long timezone = 0,
         const XQPCollator* aCollation = 0) const;
 
-  store::Item_t getEBV( ) const;
+  bool getEBV( ) const;
 
   zstring getStringValue() const;
 
@@ -1539,7 +1537,7 @@ public:
     }
   }
 
-  store::Item_t getEBV( ) const;
+  bool getEBV( ) const;
 
   zstring getStringValue() const;
 
@@ -1621,7 +1619,7 @@ public:
     }
   }
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const;
 
@@ -1701,7 +1699,7 @@ public:
     }
   }
 
-  store::Item_t getEBV( ) const;
+  bool getEBV( ) const;
 
   zstring getStringValue() const;
 
@@ -1785,7 +1783,7 @@ public:
     }
   }
 
-  store::Item_t getEBV( ) const;
+  bool getEBV( ) const;
 
   zstring getStringValue() const;
 
@@ -1867,7 +1865,7 @@ protected:
     }
   }
 
-  store::Item_t getEBV( ) const;
+  bool getEBV( ) const;
 
   zstring getStringValue() const;
 
@@ -1958,7 +1956,7 @@ public:
     }
   }
 
-  store::Item_t getEBV( ) const;
+  bool getEBV( ) const;
 
   zstring getStringValue() const;
 
@@ -2051,7 +2049,7 @@ public:
     }
   }
 
-  store::Item_t getEBV( ) const;
+  bool getEBV( ) const;
 
   zstring getStringValue() const;
 
@@ -2146,7 +2144,7 @@ public:
     }
   }
 
-  store::Item_t getEBV() const;
+  bool getEBV() const;
 
   zstring getStringValue() const;
 
@@ -2200,7 +2198,7 @@ public:
             (theValue == false ? -1 : 1));
   }
 
-  store::Item_t getEBV( ) const;
+  bool getEBV( ) const;
 
   zstring getStringValue() const;
 
