@@ -10,7 +10,8 @@ version 2.2
   * Fixed bug 917923 (bug in copying outer var values into the eval dynamic context)
   * Fixed bug 909126 (bug in cloning of var_expr)
   * Fixed bug in destruction of exit_catcher_expr
-  * Types-related optimization for the comparison operators
+  * Types-related optimizations for runtime operators (comparisons, FnBoolean, Or, And,
+    Compare).
   * Fixed bug #911585 (management of variables during eval)
   * Fixed bug #866423 (fn:empty and fn:exists iterators must reset their input in
     case of early-out)
